fix clashing wp-admin with nav menu on small width screens

--- a/style.css
+++ b/style.css
@@ -15,8 +15,6 @@
 @import url(http://fonts.googleapis.com/css?family=Droid+Serif:400,700,700italic,400italic&subset=latin,latin-ext);
 @import url(http://fonts.googleapis.com/css?family=Roboto:400italic,700italic,700,400&subset=latin,latin-ext);
 
-html { position: relative; }
-
 body,
 input,
 select,
@@ -43,7 +41,7 @@ body h2,
 body h3,
 body h4,
 body h5,
-body h6 { /* Because of the stupid CSS reset in the parent theme */
+body h6 {
 	font-family: 'Roboto', Helvetica, Arial, sans-serif;
 }
 
@@ -290,6 +288,10 @@ select {
 	}
 }
 
+#page {
+	position: relative;
+}
+
 .site-header {
 	position: relative;
 	margin-bottom: 40px;
@@ -299,7 +301,7 @@ select {
 	font-family: Arial, Helvetica, sans-serif;
 }
 .site-header .container {
-	margin-top: 75px;
+	margin-top: 100px;
 	-ms-word-wrap: break-word;
 	word-wrap: break-word;
 	padding-left: 1em;
@@ -341,26 +343,28 @@ h2.site-description {
 }
 
 #top-strip {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 
-	padding: .5em .5em 1em;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;	
+
+	padding: .5em .5em;
 	color: #eee;
 	text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
 	zoom: 1;
 	z-index: 1000;
 
-	background: -webkit-linear-gradient(top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 80%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.65)), color-stop(80%,rgba(0,0,0,0)));
-	background: -moz-linear-gradient(top, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 80%);
-	background: -ms-linear-gradient(top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 80%);
-	background: -o-linear-gradient(top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 80%);
-	background: linear-gradient(to bottom, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 80%);
+	background: rgba(0,0,0,.30); /* fallback */
+	background: -webkit-linear-gradient(top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.65)), color-stop(100%,rgba(0,0,0,0)));
+	background: -moz-linear-gradient(top, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 100%);
+	background: -ms-linear-gradient(top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%);
+	background: -o-linear-gradient(top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%);
+	background: linear-gradient(to bottom, rgba(0,0,0,0.6) 0%,rgba(0,0,0,0) 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 );
 }
 
@@ -427,19 +431,11 @@ ul.menu ul {
 	box-shadow: 3px 4px 7px -1px rgba(0, 0, 0, 0.15);
 	z-index: 10;
 }
-ul.menu > li:last-child ul {
-	left: inherit;
-	right: 0.5em;
-}
 ul.menu ul ul {
 	left: 100%;
 	top: 0;
 
 	z-index: 100;
-}
-ul.menu > li:last-child ul ul {
-	left: inherit;
-	right: 100%;
 }
 ul.menu ul li {
 	padding-left: .5em;
@@ -737,7 +733,7 @@ p.form-submit { text-align: right; }
 	font-size: 1.42rem;
 	line-height: 1.66em;
 }
-.site-footer a { color: #9ba7ac; }
+.site-footer .container a { color: #9ba7ac; }
 
 .widget ul { list-style: none; }
 .widget > ul { margin-left: 0; }
@@ -830,8 +826,7 @@ form.search-form .input-group input[type=submit] {
 		position: fixed;
 		top: 0;
 		right: 0;
-		width: 300px;
-		max-width: 300px;
+		width: 275px;
 		height: 100%;
 		overflow-y: auto;
 		background-color: white;
@@ -868,7 +863,6 @@ form.search-form .input-group input[type=submit] {
 		-webkit-animation: slide-in 0.15s;
 		animation: slide-in 0.15s;
 	}
-
 	ul.menu li {
 		display: block;
 		font-size: 2rem;
@@ -895,6 +889,10 @@ form.search-form .input-group input[type=submit] {
 		content: '\25BE';
 	}
 	#top-strip ul.menu li:hover > ul { display: none; }
+
+	.site-header .container {
+		margin-top: 75px;
+	}
 }
 
 @media only screen and (max-width: 699px) {
